# libsd

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: annotated.html  annotated_dup.js  classes.html  crc16_8c.html  crc16_8c.js  crc16_8h.html  crc16_8h.js  crc16_8h_source.html  crc7_8c.html  crc7_8c.js  crc7_8h.html  crc7_8h.js  crc7_8h_source.html  dir_35f14b60423b97685707391a73e539b4.html  dir_35f14b60423b97685707391a73e539b4.js  dir_3edb734619e28fa46613a4b648e871b6.html  dir_3edb734619e28fa46613a4b648e871b6.js  dir_54039fda600ac562dd03ed75913a326a.html  dir_54039fda600ac562dd03ed75913a326a.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e07fc44dd0f6880bc101e440f3f618cc.html  dir_e07fc44dd0f6880bc101e440f3f618cc.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  libsd_8c.html  libsd_8c.js  libsd_8h.html  libsd_8h.js  libsd_8h_source.html  (+26 more)
docs/latex/: annotated.tex  crc16_8c.tex  crc16_8h.tex  crc16_8h_source.tex  crc7_8c.tex  crc7_8h.tex  crc7_8h_source.tex  dir_35f14b60423b97685707391a73e539b4.tex  dir_3edb734619e28fa46613a4b648e871b6.tex  dir_54039fda600ac562dd03ed75913a326a.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_e07fc44dd0f6880bc101e440f3f618cc.tex  files.tex  (+16 more)
lib/: CMakeLists.txt
lib/libsd/: crc16.c  crc7.c  libsd.c
lib/spi/rp2040/: spi.c
(+36 files in other folders)
